fix: change flex direction so content does not overflow

--- a/src/styles/partials/_map.scss
+++ b/src/styles/partials/_map.scss
@@ -22,3 +22,7 @@
     border: 1px solid #0058a3;
   }
 }
+
+.mapboxgl-popup-anchor-bottom {
+  flex-direction: row;
+}
